Make form a bit nicer + fix left alignment
Made the form look a bit better on mobile.
Also got the header, main, and footer content to align properly.

--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -1,6 +1,7 @@
 %page-container {
   max-width: 900px;
   margin: 0 auto;
+  padding-left: 20px;
 }
 
 * {
@@ -36,7 +37,7 @@ main {
 header {
   background: #000;
   color: #fff;
-  padding: 20px 0 20px 40px;
+  padding: 20px 0;
   text-align: left;
   font-size: 2em;
 }
